--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Projekt</string>
+    <string name="app_name">Virtual Warehouse</string>
     <string name="title_activity_order">Order</string>
 </resources>
